--- a/style.scss
+++ b/style.scss
@@ -7,6 +7,7 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  background-color: black;
 }
 h1,
 h2,
@@ -31,20 +32,20 @@ img {
   object-fit: cover;
   object-position: center;
 }
+p {
+  font-size: clamp(13px, 1.1vw, 4rem);
+  max-inline-size: 75ch;
+}
 article {
   width: fit-content;
-  p {
-    font-size: clamp(13px, 1.1vw, 4rem);
-    max-inline-size: 75ch;
-  }
 }
 
 #profilePhoto {
   width: 100%;
   pointer-events: none;
   max-width: 30%;
-  max-height: 200px;
-  object-fit: cover;
+  max-height: 150px;
+  object-fit: fill;
   object-position: center;
 }
 li {
