--- a/style.scss
+++ b/style.scss
@@ -37,7 +37,11 @@ p {
   max-inline-size: 75ch;
 }
 article {
-  width: fit-content;
+  p {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
 
 #profilePhoto {
@@ -45,7 +49,7 @@ article {
   pointer-events: none;
   max-width: 30%;
   max-height: 150px;
-  object-fit: fill;
+  object-fit: contain;
   object-position: center;
 }
 li {
