--- a/style.scss
+++ b/style.scss
@@ -3,6 +3,7 @@
 }
 body {
   font-family: "Montserrat", sans-serif;
+  background-image: none;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
