improvemenrs-remove imageKit

--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,7 @@
+body{background: url('./assets/annie.webp') no-repeat center;}
+
 header {
+  background-color:#000000b3;
   p {
     margin: auto;
   }
