--- a/style.css
+++ b/style.css
@@ -1,17 +1,35 @@
-body { background: url("./assets/annie.webp") no-repeat center; }
-
-header { background-color: #000000b3; }
-
-header p { margin: auto; }
-
-img { width: 100%; height: 300px; object-fit: cover; object-position: center; pointer-events: none; }
-
-p { font-size: clamp(13px, 1.1vw, 4rem); max-inline-size: 75ch; }
-
-a:hover { text-decoration: none; }
-
-#profilePhoto { width: 100%; pointer-events: none; max-width: 30%; max-height: 150px; object-fit: contain; }
-
-ul { overflow-y: scroll; height: 300px; }
-
-ul li img { width: 10%; max-height: 50px; }
+header {
+  background-color: rgba(0, 0, 0, 0.7019607843);
+}
+header p {
+  margin: auto;
+}
+img {
+  width: 100%;
+  height: 300px;
+  -o-object-fit: cover;
+  object-fit: cover;
+  -o-object-position: center;
+  object-position: center;
+  pointer-events: none;
+}
+p {
+  font-size: clamp(13px, 1.1vw, 4rem);
+  max-inline-size: 75ch;
+}
+a:hover {
+  text-decoration: none;
+}
+#profilePhoto {
+  width: 100%;
+  pointer-events: none;
+  max-width: 30%;
+  max-height: 150px;
+  object-fit: contain;
+}
+ul{display: flex;}
+ul li img {
+ /*  width: 10%;
+  max-height: 50px; */
+  aspect-ratio: 1/1;
+}
