--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+body{
+  background-image: url('./assets/background-high.webp');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  min-height: 100dvh;
+}
 header {
   background-color: rgba(0, 0, 0, 0.7019607843);
 }
@@ -5,11 +12,7 @@ header p {
   margin: auto;
 }
 img {
-  width: 100%;
-  height: 300px;
-  -o-object-fit: cover;
   object-fit: cover;
-  -o-object-position: center;
   object-position: center;
   pointer-events: none;
 }
@@ -20,13 +23,13 @@ p {
 a:hover {
   text-decoration: none;
 }
-#profilePhoto {
+/* #profilePhoto {
   width: 100%;
   pointer-events: none;
   max-width: 30%;
   max-height: 150px;
   object-fit: contain;
-}
+} */
 ul{display: flex;}
 ul li img {
  /*  width: 10%;
