--- a/style.css
+++ b/style.css
@@ -1,38 +1,55 @@
-body{
-  background-image: url('./assets/background-high.webp');
+body {
+  background-image: url("./assets/background.webp");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   min-height: 100dvh;
+  display: grid;
+ 
 }
+
 header {
   background-color: rgba(0, 0, 0, 0.7019607843);
+  & h1 {
+    font-family: "Amatic SC", handwriting;
+    font-size: 4rem;
+  }
 }
-header p {
+
+main {
+  display: grid;
+}
+
+img {
+  /*   max-width: 100%;
+  height: auto;
+  display: block;
+  object-fit: cover;
+  object-position: center; */
+  pointer-events: none;
+}
+
+p {
+  font-size: 18px;
+  max-inline-size: 75ch;
   margin: auto;
 }
-img {
-  object-fit: cover;
-  object-position: center;
-  pointer-events: none;
+ul {
+  display: flex;
+  flex-direction: column;
 }
-p {
-  font-size: clamp(13px, 1.1vw, 4rem);
-  max-inline-size: 75ch;
+ul li {
+  text-align: center;
+  & img {
+    width: 50%;
+  }
 }
-a:hover {
-  text-decoration: none;
-}
-/* #profilePhoto {
-  width: 100%;
-  pointer-events: none;
-  max-width: 30%;
-  max-height: 150px;
-  object-fit: contain;
-} */
-ul{display: flex;}
-ul li img {
- /*  width: 10%;
-  max-height: 50px; */
-  aspect-ratio: 1/1;
+
+@media (min-width: 1024px) {
+  body {
+    background-image: url("./assets/background-high.webp");
+    & main {
+      grid-template-columns: 2fr 1fr;
+    }
+  }
 }
